Change top-level sections to details

--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
             margin-left: 0.1em;
         }
 
-        h1, h2, h3, h4, h5, h6 {
+        h1, h2, h3, h4, h5, h6, details {
             margin-top: 1.25em;
             margin-bottom: 0.5em;
+        }
+
+        summary h2 {
+          display: inline;
         }
 
         header h2 {
@@ -117,8 +121,8 @@
     <p>I prefer to work from home but I’m open to an on-site position within roughly a 90-minute commute from <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>.</p>
 </section>
 
-<section id="key-skills">
-    <h2>Key Skills</h2>
+<details id="key-skills">
+    <summary><h2>Key Skills</h2></summary>
     <ul>
         <li>Problem analysis</li>
         <li>Software design, architecture, construction, deployment, and operation</li>
@@ -129,10 +133,10 @@
         <li>Team/organizational leadership</li>
     </ul>
     <p>See also <a href="#additional-skills">Additional Skills</a> below.</p>
-</section>
+</details>
 
-<section id="key-technologies">
-    <h2>Key Technologies</h2>
+<details id="key-technologies">
+    <summary><h2>Key Technologies</h2></summary>
     <ul>
         <li><a href="https://aws.amazon.com/">Amazon Web Services (AWS)</a></li>
         <li><a href="https://clojure.org/">Clojure</a></li>
@@ -147,10 +151,11 @@
         <li><a href="https://www.terraform.io/">Terraform</a></li>
     </ul>
     <p>See also <a href="#additional-skills">Additional Skills</a> below.</p>
-</section>
+</details>
 
-<section id="experience">
-    <h2>Experience</h2>
+
+<details id="experience">
+    <summary><h2>Experience</h2></summary>
 
     <section id="park-assist">
         <h3>2016–present: <a href="http://parkassist.com/">Park Assist</a></h3>
@@ -250,10 +255,10 @@
             <li>Founded and managed a small web design shop in Pikesville, MD providing full-service web design and development to small companies in the Baltimore area</li>
         </ul>
     </section>
-</section>
+</details>
 
-<section id="examples">
-    <h2>Examples</h2>
+<details id="examples">
+    <summary><h2>Examples</h2></summary>
     <ul>
         <li>My current (stalled) side project is <a href="https://github.com/aviflax/omnia">Omnia</a>, a system to search multiple document silos at once. Warning: under construction!</li>
         <li>A prior side project is <a href="https://github.com/aviflax/github-digests">GitHub Digests</a>, a system to aggregate GitHub notifications into daily email digests. (If you check it out, please keep in mind that it’s only 10% built and I was new to Ruby!)</li>
@@ -279,10 +284,10 @@
         </li>
     </ul>
     <p>I’d be happy provide more examples of my work, such as architecture diagrams and presentations, business analysis, code, etc. Just <a href="#contact">get in touch!</a></p>
-</section>
+</details>
 
-<section id="around-the-web">
-    <h2>Around the Web</h2>
+<details id="around-the-web">
+    <summary><h2>Around the Web</h2></summary>
     <ul>
         <li><a href="http://aviflax.com/">Blog</a></li>
         <li><a href="https://twitter.com/flaximus_prime">Twitter</a></li>
@@ -291,10 +296,10 @@
         <li><a href="https://stackoverflow.com/users/7012/avi-flax">Stack Overflow</a></li>
         <li><a href="https://github.com/aviflax">GitHub</a></li>
     </ul>
-</section>
+</details>
 
-<section id="additional-skills">
-    <h2>Additional Skills</h2>
+<details id="additional-skills">
+    <summary><h2>Additional Skills</h2></summary>
     <ul id="additional-skills-list">
         <li>Behavior Driven Development</li>
         <li>Browser APIs</li>
@@ -321,17 +326,17 @@
         <li>UX design</li>
         <li>XML/XSL/XSD/XQuery</li>
     </ul>
-</section>
+</details>
 
-<section id="hobbies">
-    <h2>Hobbies</h2>
+<details id="hobbies">
+    <summary><h2>Hobbies</h2></summary>
     <ul>
         <li><a href="http://www.flickr.com/photos/avi4now/7819823912/lightbox/">Auto racing (autox)</a></li>
         <li>Cycling</li>
         <li>Hiking</li>
         <li><a href="http://www.goodreads.com/user/show/2772290-avi-flax">Reading</a></li>
     </ul>
-</section>
+</details>
 
 <section id="thanks">
     <h2>Thanks!</h2>
