--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     <summary><h2>Examples</h2></summary>
     <ul>
         <li>My current (stalled) side project is <a href="https://github.com/aviflax/omnia">Omnia</a>, a system to search multiple document silos at once. Warning: under construction!</li>
-        <li>A prior side project is <a href="https://github.com/aviflax/github-digests">GitHub Digests</a>, a system to aggregate GitHub notifications into daily email digests. (If you check it out, please keep in mind that it’s only 10% built and I was new to Ruby!)</li>
+        <li>A prior (stalled) side project is <a href="https://github.com/aviflax/github-digests">GitHub Digests</a>, a system to aggregate GitHub notifications into daily email digests. (If you check it out, please keep in mind that it’s only 10% built and I was new to Ruby!)</li>
         <li>Another prior side project was <a href="http://3things.aviflax.com/">Three Things</a>; I published <a href="http://aviflax.com/post/two-practices-three-things/">a post</a> telling its story.</li>
         <li>I’ve been collecting <a href="https://gist.github.com/aviflax/7f453a41a06a200a2f5d">resources for learning stream processing</a> since August 2014.</li>
         </li>
