Break out current position + prior experience; reorganize sections
I’m thinking that:

* My current position and experience are way more important than my key
  skills and technologies
  * Especially since I’m planning to refactor the top section, moving my
    objective up to the very top, replacing my “role” description, and
    replacing the details objectives with value statements.
* My current position is way more important than prior experience, so it
makes sense to break it out and highlight it
  * Which I can do more easily now that we’re using <details>; current
    position can start out open while prior experience can start out
    collapsed like most of the other sections.

Also, now that I’m using <details>, I have more flexibility in ordering things.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           font-size: small;
         }
 
-        #experience > section > ul {
+        .experience > section > ul {
             margin-top: 0.5em;
         }
     </style>
@@ -120,49 +120,20 @@
     <p>I’m open to a leadership role in which I’d be hands-on with design and development and I’d be supported in empowering people.</p>
     <p>I prefer to work from home but I’m open to an on-site position within roughly a 90-minute commute from <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>.</p>
 </section>
+<details id="current-position" class="experience" open>
+  <summary><h2>Current Position</h2></summary>
 
-<details id="key-skills">
-    <summary><h2>Key Skills</h2></summary>
-    <ul>
-        <li>Problem analysis</li>
-        <li>Software design, architecture, construction, deployment, and operation</li>
-        <li>A deep &amp; broad understanding of the World Wide Web</li>
-        <li>RESTful Web API/service design &amp; development</li>
-        <li>Product design</li>
-        <li>Data engineering</li>
-        <li>Team/organizational leadership</li>
-    </ul>
-    <p>See also <a href="#additional-skills">Additional Skills</a> below.</p>
+  <section id="park-assist">
+      <h3>2016–present: Principal Software Architect at <a href="http://parkassist.com/">Park Assist</a></h3>
+      <ul>
+          <li>Helping to design and build the next generation of the Park Assist platform</li>
+          <li><strong>FLESH THIS OUT</strong></li>
+      </ul>
+  </section>
 </details>
 
-<details id="key-technologies">
-    <summary><h2>Key Technologies</h2></summary>
-    <ul>
-        <li><a href="https://aws.amazon.com/">Amazon Web Services (AWS)</a></li>
-        <li><a href="https://clojure.org/">Clojure</a></li>
-        <li><a href="https://aws.amazon.com/dynamodb/">DynamoDB</a></li>
-        <li><a href="https://golang.org/">Go</a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
-        <li><a href="https://kafka.apache.org/">Kafka</a></li>
-        <li><a href="https://aws.amazon.com/kinesis/">Kinesis</a></li>
-        <li><a href="https://aws.amazon.com/lambda/">Lambda (AWS)</a></li>
-        <li><a href="https://www.python.org/">Python</a></li>
-        <li><a href="https://www.ruby-lang.org/">Ruby</a></li>
-        <li><a href="https://www.terraform.io/">Terraform</a></li>
-    </ul>
-    <p>See also <a href="#additional-skills">Additional Skills</a> below.</p>
-</details>
-
-
-<details id="experience">
-    <summary><h2>Experience</h2></summary>
-
-    <section id="park-assist">
-        <h3>2016–present: <a href="http://parkassist.com/">Park Assist</a></h3>
-        <ul>
-            <li>Serving as principle software architect, helping to design and build the next generation of the Park Assist platform.</li>
-        </ul>
-    </section>
+<details id="prior-experience" class="experience">
+    <summary><h2>Prior Experience</h2></summary>
 
     <section id="timehop">
         <h3>2015: Timehop</h3>
@@ -284,6 +255,39 @@
         </li>
     </ul>
     <p>I’d be happy provide more examples of my work, such as architecture diagrams and presentations, business analysis, code, etc. Just <a href="#contact">get in touch!</a></p>
+</details>
+
+<details id="key-skills">
+    <summary><h2>Key Skills</h2></summary>
+    <ul>
+        <li>Problem analysis</li>
+        <li>Software design, architecture, construction, deployment, and operation</li>
+        <li>Deep expertise in the World Wide Web and HTTP</li>
+        <li>Web API design &amp; development</li>
+        <li>Product design</li>
+        <li>Data engineering</li>
+        <li>Team/organizational leadership</li>
+    </ul>
+    <p>See also <a href="#additional-skills">Additional Skills</a> below.</p>
+</details>
+
+<details id="key-technologies">
+    <summary><h2>Key Technologies</h2></summary>
+    <ul>
+        <li><a href="https://aws.amazon.com/">Amazon Web Services (AWS)</a></li>
+        <li><a href="https://clojure.org/">Clojure</a></li>
+        <li><a href="https://aws.amazon.com/dynamodb/">DynamoDB</a></li>
+        <li><a href="https://golang.org/">Go</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
+        <li><a href="https://kafka.apache.org/">Kafka</a></li>
+        <li><a href="https://aws.amazon.com/kinesis/">Kinesis</a></li>
+        <li><a href="https://kubernetes.io">Kubernetes</a></li>
+        <li><a href="https://aws.amazon.com/lambda/">Lambda (AWS)</a></li>
+        <li><a href="https://www.python.org/">Python</a></li>
+        <li><a href="https://www.ruby-lang.org/">Ruby</a></li>
+        <li><a href="https://www.terraform.io/">Terraform</a></li>
+    </ul>
+    <p>See also <a href="#additional-skills">Additional Skills</a> below.</p>
 </details>
 
 <details id="around-the-web">
