--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
         body {
             margin: 0 auto;
-            padding-left: 10%;
-            padding-right: 10%;
+            padding-left: 15%;
+            padding-right: 15%;
         }
 
         #additional-skills-list {
@@ -68,7 +68,7 @@
         }
 
         .contact {
-          margin: 1.5em 0 0 0;
+          margin: 1em 0;
           list-style-type: none;
           line-height: 150%;
           padding: 0;
