Significant copy changes
* Change tagline
* Remove Current Status
* Remove Objectives
* Add value statements

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 <body>
 
 <header>
-    <h1 id="avi-flax">Avi Flax</h1>
-    <h2>Software Developer/Architect</h2>
+    <h1 id="name">Avi Flax</h1>
+    <h2 id="objective"><i>Seeking Principal or Chief <i>Software Architect</i> Role</i></h2>
     <ul id="contact" class="contact">
         <li><a href="mailto:avi@aviflax.com">avi@aviflax.com</a></li>
         <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
@@ -132,18 +132,24 @@
     </ul>
 </header>
 
-<section id="current-status">
-  <h2>Current Status</h2>
-  <p>I’m not actively looking for a position, but I’m always open to interesting opportunities that align with <a href="#objectives">my objectives</a>.</p>
+<section id="statements">
+    <p>I <b>design, build, and operate</b> <i>software systems</i> and <i>human systems</i> that solve <b>real problems</b> and make a <b>positive difference</b> in the world.</p>
+    <p>I believe that <b>values matter</b>.</p>
+
+    <details>
+      <summary><h2>More Values</h2></summary>
+      <p>I believe that diversity and inclusion are crucial <i>and</i> create rich, healthy, sustainable communities.</p>
+      <p>I believe that people can only do great work if they are healthy, growing, supported, and respected.</p>
+      <p>I believe that all great processes have one thing in common: they are regularly reviewed and refined.</p>
+      <p>I believe that the only thing that matters about any technology is its potential to solve problems.</p>
+      <p>I believe that technology has tremendous potential FINISH</p>
+      <p>I believe that we humans do some of our best thinking while <i>communicating</i> — so let’s do more of that.</p>
+      <p>I believe that institutional/communal memory is critical to building sustainable organizations.</p>
+      <p>I believe that with software, design is like a fine wine paired with a gourmet dinner: drink the entire bottle before the meal and you’ll lose your head; have one or two glasses before you eat and then spread the rest throughout the meal and you’ll achieve gastronomic bliss.</p>
+      <p><b>FINISH THIS</b></p>
+    </details>
 </section>
 
-<section id="objectives">
-    <h2>Objectives</h2>
-    <p>I want to design and build systems that solve real problems and make a positive difference in the world.</p>
-    <p>I want to exercise my skills, grow personally and professionally, and collaborate with great people in a mission-oriented company that’s functional and healthy.</p>
-    <p>I’m open to a leadership role in which I’d be hands-on with design and development and I’d be supported in empowering people.</p>
-    <p>I prefer to work from home but I’m open to an on-site position within roughly a 90-minute commute from <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>.</p>
-</section>
 <details id="current-position" class="experience" open>
   <summary><h2>Current Position</h2></summary>
 
