--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <!-- Thanks for checking out my HTML and CSS skillz! Clearly you should totally hire me. What are you waiting for? avi@aviflax.com -->
     <title>Avi Flax » Résumé</title>
     <style>
@@ -35,6 +36,7 @@
         }
 
         body {
+            max-width: 900px; /* seems reasonable I guess */
             margin: 0 auto;
             padding-left: 15%;
             padding-right: 15%;
@@ -49,7 +51,7 @@
           font-style: normal;
         }
 
-        #additional-skills-list {
+        #additional-skills > ul, #key-technologies > ul, #around-the-web > ul {
             -column-count: 2;
             -column-gap: 10px;
             -webkit-column-count: 2;
@@ -59,7 +61,7 @@
             list-style-position: inside;
         }
 
-        #additional-skills-list li {
+        #additional-skills > ul > li {
             margin-left: 0.1em;
         }
 
@@ -106,6 +108,16 @@
           margin-top: 0.5em;
         }
 
+        /* I have no idea what I’m doing. */
+        @media only screen and (min-width: 320px) and (max-width: 768px) {
+          body {
+            margin: 0 auto;
+            padding-left: 5%;
+            padding-right: 5%;
+          }
+        }
+
+        /* I have a bit of an idea what I’m doing. */
         @media print {
           body {
             font-size: 12pt;
