--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 <header>
     <h1 id="name">Avi Flax</h1>
-    <h2 id="objective"><i>Seeking Principal or Chief <i>Software Architect</i> Role</i></h2>
+    <h2 id="objective">Seeking Principal <b>Software Architect</b> Role*</h2>
     <ul id="contact" class="contact">
         <li><a href="mailto:avi@aviflax.com">avi@aviflax.com</a></li>
         <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
@@ -157,7 +157,7 @@
 </header>
 
 <section id="statements">
-    <p>I <b>design, build, and operate</b> <i>software systems</i> and <i>human systems</i> that solve <b>real problems</b> and make a <b>positive difference</b> in the world.</p>
+    <p id="what-i-do">I <b>design, build, and operate</b> <i>software systems</i> and <i>human systems</i> that solve <b>real problems</b> and make a <b>positive difference</b> in the world.</p>
     <p>I believe that <b>values matter</b>.</p>
 
     <details>
@@ -414,7 +414,8 @@
 </section>
 
 <footer>
-  <p>Last updated on 4 January 2017.</p>
+  <p>* Or something like that. I’m not hung up on titles; I’m more interested in <a href="#statements">what I <i>do</i></a>. If you have a need in that ballpark, please get in touch!</p>
+  <p>Last updated on 17 June 2017.</p>
 </footer>
 
 </body>
