Add video games to hobbies

--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
         <li>Cycling</li>
         <li>Hiking</li>
         <li><a href="http://www.goodreads.com/user/show/2772290-avi-flax">Reading</a></li>
+        <li><a href="http://aviflax.com/post/gaming-in-2008/">Video games</a></li>
     </ul>
 </details>
 
