Improve More Values

--- a/index.html
+++ b/index.html
@@ -162,15 +162,14 @@
 
     <details>
       <summary><h2>More Values</h2></summary>
-      <p>I believe that diversity and inclusion are crucial <i>and</i> create rich, healthy, sustainable communities.</p>
+      <p>I believe that diversity and inclusion are crucial <i>and</i> create rich, healthy, sustainable, productive communities (companies).</p>
+      <p>I believe that <a href="https://en.wikipedia.org/wiki/Don%27t_repeat_yourself">DRY</a> and <a href="https://en.wikipedia.org/wiki/Rule_of_three_(computer_programming)">the Rule of Three</a> apply to docs just as much as code.</p>
       <p>I believe that people can only do great work if they are healthy, growing, supported, and respected.</p>
       <p>I believe that all great processes have one thing in common: they are regularly reviewed and refined.</p>
       <p>I believe that the only thing that matters about any technology is its potential to solve problems.</p>
-      <p>I believe that technology has tremendous potential FINISH</p>
+      <p>I believe that technology is a phenomenally powerful tool that we humans have at our disposal to solve problems — if we so choose.</p>
       <p>I believe that we humans do some of our best thinking while <i>communicating</i> — so let’s do more of that.</p>
       <p>I believe that institutional/communal memory is critical to building sustainable organizations.</p>
-      <p>I believe that with software, design is like a fine wine paired with a gourmet dinner: drink the entire bottle before the meal and you’ll lose your head; have one or two glasses before you eat and then spread the rest throughout the meal and you’ll achieve gastronomic bliss.</p>
-      <p><b>FINISH THIS</b></p>
     </details>
 </section>
 
