Flesh out Park Assist

--- a/index.html
+++ b/index.html
@@ -198,8 +198,19 @@
         Principal Software Architect at <a href="http://parkassist.com/">Park Assist</a>
       </h3>
       <ul>
-          <li>Helping to design and build the next generation of the Park Assist platform</li>
-          <li><strong>FLESH THIS OUT</strong></li>
+          <li>Helping established company transition from execution phase to growth phase</li>
+          <li>Helping unify a once-balkanized team</li>
+          <li>Helping establish technical roadmaps for all systems</li>
+          <li>Designing and building streaming data pipelines conveying data from sites around the world to a central data center</li>
+          <li>Designing and building stream data topologies using <a href="https://kafka.apache.org">Kafka</a> and <a href="https://kafka.apache.org/documentation/streams">Kafka Streams</a> to effect high-throughput and low-latency data-centric applications</li>
+          <li>Driving adoption of infrastructure-as-code, configuration management, and immutable infrastructure with <a href="https://www.terraform.io">Terraform</a>, <a href="https://www.ansible.com">Ansible</a>, <a href="https://circleci.com">CircleCI</a>, <a href="https://aws.amazon.com">AWS</a>, and <a href="https://kubernetes.io">Kubernetes</a></li>
+          <li>Operating services with <a href="https://www.terraform.io">Terraform</a>, <a href="https://www.ansible.com">Ansible</a>, <a href="https://aws.amazon.com">AWS</a>, and <a href="https://kubernetes.io">Kubernetes</a>, <a href="https://www.datadoghq.com">Datadog</a>, <a href="https://slack.com">Slack</a></li>
+          <li>Helping with team structure and hiring</li>
+          <li>Helping to define and execute a new approach to engineering support</li>
+          <li>Helping create a culture of caring about sustainability, documentation, and maintainability</li>
+          <li>Helping drive adoption of consistent conventions around testing, documentation, code review, and continuous integration</li>
+          <li>Introducing and championing new development tools: <a href="https://github.com">GitHub</a>, <a href="https://www.terraform.io">Terraform</a>, <a href="https://circleci.com">CircleCI</a></li>
+          <li>Introducing and championing new company-wide communication media: <a href="https://slack.com">Slack</a>, <a href="https://www.discourse.org">Discourse</a></li>
       </ul>
   </section>
 </details>
