Simplify tagline/objective + a few tweaks

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             padding-right: 15%;
         }
 
+        #name {
+          font-size: 3em;
+          margin: 0.5em 0 0.25em 0;
+        }
+
         #objective {
           font-weight: normal;
           font-size: 160%
@@ -160,7 +165,7 @@
 
 <header>
     <h1 id="name">Avi Flax</h1>
-    <h2 id="objective">Seeking Principal <b>Software Architect</b> Role*</h2>
+    <h2 id="objective">Seeking <b>Senior Software Architect</b> Role*</h2>
     <ul id="contact" class="contact">
         <li><a href="mailto:avi@aviflax.com">avi@aviflax.com</a></li>
         <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
@@ -201,8 +206,8 @@
           <li>Helping established company transition from execution phase to growth phase</li>
           <li>Helping unify a once-balkanized team</li>
           <li>Helping establish technical roadmaps for all systems</li>
-          <li>Designing and building streaming data pipelines conveying data from sites around the world to a central data center</li>
-          <li>Designing and building stream data topologies using <a href="https://kafka.apache.org">Kafka</a> and <a href="https://kafka.apache.org/documentation/streams">Kafka Streams</a> to effect high-throughput and low-latency data-centric applications</li>
+          <li>Designing, building, and operating streaming data pipelines conveying data from sites around the world to a central data center</li>
+          <li>Designing, building, and operating stream data topologies using <a href="https://kafka.apache.org">Kafka</a> and <a href="https://kafka.apache.org/documentation/streams">Kafka Streams</a> to effect high-throughput and low-latency data-centric applications</li>
           <li>Driving adoption of infrastructure-as-code, configuration management, and immutable infrastructure with <a href="https://www.terraform.io">Terraform</a>, <a href="https://www.ansible.com">Ansible</a>, <a href="https://circleci.com">CircleCI</a>, <a href="https://aws.amazon.com">AWS</a>, and <a href="https://kubernetes.io">Kubernetes</a></li>
           <li>Operating services with <a href="https://www.terraform.io">Terraform</a>, <a href="https://www.ansible.com">Ansible</a>, <a href="https://aws.amazon.com">AWS</a>, and <a href="https://kubernetes.io">Kubernetes</a>, <a href="https://www.datadoghq.com">Datadog</a>, <a href="https://slack.com">Slack</a></li>
           <li>Helping with team structure and hiring</li>
@@ -442,7 +447,7 @@
 
 <footer>
   <p>* Or something like that. I’m not hung up on titles; I’m more interested in <a href="#statements">what I <i>do</i></a>. If you have a need in that ballpark, please get in touch!</p>
-  <p>Last updated on 18 June 2017.</p>
+  <p>Last updated on 20 June 2017.</p>
 </footer>
 
 </body>
