Tweak “what I do” statement yet again

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 </header>
 
 <section id="statements">
-    <p id="what-i-do">I <b>design, build, and operate</b> <i>software systems</i> and <i>human systems</i> that solve <b>real problems</b> and make a <b>positive difference</b> in the world.</p>
+    <p id="what-i-do">I design, build, and operate <b>software systems and teams</b> that solve <b>real problems</b> and make a <b>positive difference</b> in the world.</p>
     <p>I believe that <b>values matter</b>.</p>
 
     <details>
