Add link to PDF version

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 
         footer {
           font-size: small;
+          margin-top: 3em;
+          border-top: 1px solid silver;
         }
 
         .experience > section > ul {
@@ -133,6 +135,10 @@
             margin: 0 auto;
             padding-left: 5%;
             padding-right: 5%;
+          }
+
+          #print-version {
+            display: none;
           }
         }
     </style>
@@ -436,6 +442,11 @@
         <li><a href="https://calendly.com/aviflax">schedule a chat</a></li>
         -->
     </ul>
+</section>
+
+<section id="print-version">
+  <h2>PDF Version</h2>
+  <p>If you’d like to print or e-mail my résumé, you’re welcome to use <a href="Avi Flax’s Resume (CV).pdf">the PDF version.</p>
 </section>
 
 <footer>
