Improve page breaks when printing

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
             margin-top: 0.5em;
         }
 
+        section, #current-position {
+          break-inside: avoid;
+          page-break-inside: avoid;
+        }
+
         .contact {
           margin: 1em 0;
           list-style-type: none;
