--- a/index.html
+++ b/index.html
@@ -214,12 +214,9 @@
       Principal Software Engineer at <a href="https://fundingcircle.com/">Funding Circle</a>
     </h3>
     <ul class="activities">
-      <li>Leading a drive to level up the documentation and knowledge sharing culture/practices of a ~200-person product development group</li>
+      <li>Driving an initiative to level up the documentation and knowledge sharing culture/practices of a ~250-person software product development group</li>
       <li>Taken point on designing and implementing a useful information architecture for the corporate wiki</li>
-      <li>Conceived, developed, and released <a href="https://fundingcircle.github.io/fc4-framework/">FC4</a>, an open-source framework for authoring, publishing, and maintaining software architecture diagrams (<a href="https://github.com/FundingCircle/fc4-framework">repo</a>)</li>
-      <li>Released <a href="https://github.com/FundingCircle/fc4c">FC4C</a>, an open-source tool for working with FC4 diagrams. (Yeah, the name, I know. I’ll be renaming it soon.)</li>
-      <li>Built <a href="https://github.com/FundingCircle/github-tools">github-tools</a>, a toolset for working with GitHub in a large org with many repos.</li>
-      <li>Released <a href="https://github.com/FundingCircle/learn-you-some-kafka">Learn You Some Kafka!</a> — atomic, bite-size, highly-focused interactive tutorials that teach how to work with Kafka using Ruby or Clojure.</li>
+      <li>Conceived, developed, released, and maintain <a href="https://fundingcircle.github.io/fc4-framework/">the FC4 Framework</a>, an open-source framework for authoring, publishing, and maintaining software architecture diagrams (includes a CLI tool written with Clojure)</li>
       <li>Working on improving organizational effectiveness; e.g. communication channels, practices, etc.</li>
     </ul>
   </section>
@@ -367,10 +364,9 @@
         <li>2018:
           <ul>
             <li>Presented <a href="https://www.youtube.com/watch?v=Vl4KFEJwPPQ">Concurrency via Communication — Large and Small</a> at the Bay Area Clojure Meetup (hosted by Funding Circle)</li>
-            <li>Released <a href="https://fundingcircle.github.io/fc4-framework/">FC4</a>, an open-source framework for authoring, publishing, and maintaining software architecture diagrams (<a href="https://github.com/FundingCircle/fc4-framework">repo</a>)</li>
-            <li>Released <a href="https://github.com/FundingCircle/fc4c">FC4C</a>, an open-source tool for working with FC4 diagrams. (Yeah, the name, I know. I’ll be renaming it soon.)</li>
+            <li>Released <a href="https://fundingcircle.github.io/fc4-framework/">the FC4 Framework</a>, an open-source framework for authoring, publishing, and maintaining software architecture</li>
             <li>Built <a href="https://github.com/FundingCircle/github-tools">github-tools</a>, a toolset for working with GitHub in a large org with many repos.</li>
-            <li>Released <a href="https://github.com/FundingCircle/learn-you-some-kafka">Learn You Some Kafka!</a> — atomic, bite-size, highly-focused interactive tutorials that teach how to work with Kafka using Ruby or Clojure.</li>
+            <li>Released <a href="https://github.com/FundingCircle/learn-you-some-kafka">Learn You Some Kafka!</a> — atomic, bite-size, highly-focused interactive tutorials that teach how to work with Kafka using Ruby or Clojure</li>
             <li>Presented <a href="https://www.youtube.com/watch?v=5JpcDKooaIQ">Large Nested JSON with Spec: A Comedy of Errors</a> at the Bay Area Clojure Meetup (hosted by Funding Circle)</li>
           </ul>
         <li>2017:
@@ -430,8 +426,6 @@
         <li><a href="https://aws.amazon.com/">Amazon Web Services (AWS)</a></li>
         <li><a href="https://clojure.org/">Clojure</a></li>
         <li><a href="https://www.docker.com/">Docker</a></li>
-        <li><a href="https://aws.amazon.com/dynamodb/">DynamoDB</a></li>
-        <li><a href="https://golang.org/">Go</a></li>
         <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
         <li><a href="https://kafka.apache.org/">Kafka</a></li>
         <li><a href="https://aws.amazon.com/kinesis/">Kinesis</a></li>
@@ -467,8 +461,10 @@
         <li><a href="http://www.datomic.com">Datomic</a></li>
         <li>DB Design</li>
         <li>Django</li>
+        <li><a href="https://aws.amazon.com/dynamodb/">DynamoDB</a></li>
         <li>ElasticSearch</li>
         <li>Flask</li>
+        <li><a href="https://golang.org/">Go</a> (Golang)</li>
         <li>Groovy</li>
         <li>Information architecture</li>
         <li>JavaScript</li>
@@ -508,7 +504,7 @@
     </ul>
 </section>
 
-<!-- I just don’t have time to update the PDF right now.
+<!-- I just don’t have time to update the PDF ~right now~ ever.
 <section id="print-version">
   <h2>PDF Version</h2>
   <p>If you’d like to print or e-mail this résumé, you’re welcome to use <a href="Avi Flax’s Resume (CV).pdf">the PDF version</a>.</p>
@@ -531,7 +527,7 @@
 </section>
 
 <footer>
-  <p>Last updated on 19 June 2018.</p>
+  <p>Last updated on 17 July 2019.</p>
 </footer>
 
 </body>
