--- a/index.html
+++ b/index.html
@@ -523,12 +523,10 @@
     </ul>
 </section>
 
-<!-- I just don’t have time to update the PDF ~right now~ ever.
 <section id="print-version">
   <h2>PDF Version</h2>
-  <p>If you’d like to print or e-mail this résumé, you’re welcome to use <a href="Avi Flax’s Resume (CV).pdf">the PDF version</a>.</p>
+  <p>If you’d like to e-mail this résumé, or add it to your applicant tracking system, you’re welcome to use <a href="Avi Flax’s Resume (CV).pdf">the PDF version</a>.</p>
 </section>
--->
 
 <section id="footnotes">
   <h2>Notes</h2>
